<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/diary_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape_photo"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/diary_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/camera5"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diary_title_label" />

                <ImageView
                    android:id="@+id/diary_collected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_action_collected" />

            </LinearLayout>

            <EditText
                android:id="@+id/diary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diary_title_hint"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/video_button"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/luxiangji1" />

                <ImageButton
                    android:id="@+id/video_player_button"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/play" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diary_amount_label" />

        <EditText
            android:id="@+id/diary_content"
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:gravity="top"
            android:hint="@string/diary_amount_hint"
            android:minLines="5"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/diary_date_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/diary_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape1" />

            <Button
                android:id="@+id/diary_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape1" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
